# smb_common

./: .gitignore  README.md  frames.gv  jenkins-pipeline  record_sensors.sh  smb.screen
odometry_conversion/: CMakeLists.txt  package.xml
odometry_conversion/include/odometry_conversion/: OdometryConversion.hpp
odometry_conversion/launch/: tracking_camera_sim.launch
odometry_conversion/src/: OdometryConversion.cpp  odometry_conversion_node.cpp
smb/: CMakeLists.txt  package.xml
smb/config/: smb261_cam0.yaml  smb262_cam0.yaml  smb263_cam0.yaml  smb264_cam0.yaml  tracking_camera_config.json  tracking_camera_rear_config.json
smb/launch/: sensors.launch  smb.launch  team6_stack.launch
smb_common/smb/: package.xml
smb_common/smb/launch/: sensors.launch
smb_common/smb_control/: CMakeLists.txt
smb_common/smb_control/config/: localization.yaml
smb_common/smb_gazebo/: CMakeLists.txt  README.md
smb_control/: CMakeLists.txt  package.xml
smb_control/config/: PIDConfig.cfg  gazebo_control.yaml  localization.yaml  smb_control.yaml  teleop_logitech.yaml  twist_mux.yaml
smb_control/include/smb_control/: PIDControllerNode.hpp
smb_control/launch/: smb_control.launch  start_ekf.launch  start_ekf_reconfigure.launch  teleop.launch
smb_control/src/: PIDControllerNode.cpp  ekf_restarter.py  joy_e_stop_node.py  transformer_node.py
smb_description/: package.xml
smb_description/launch/: debug.launch  load.launch
smb_description/rviz/: smb_description.rviz
smb_description/urdf/: realsense_t265.urdf.xacro  smb.urdf.xacro  smb_big_properties.urdf.xacro  smb_blackfly_camera.urdf.xacro  smb_blackfly_camera_stereo.urdf.xacro  smb_gazebo_addins.urdf.xacro  smb_lidar_mount.urdf.xacro  smb_properties.urdf.xacro  smb_rgb_camera.urdf.xacro  smb_rgbcamera.urdf.xacro  smb_standalone.urdf.xacro  smb_utils.urdf.xacro
smb_description/urdf/sensor_plugins/: smb_blackfly.gazebo.xacro  smb_blackfly_stereo.gazebo.xacro  smb_depth.gazebo.xacro  smb_gps.gazebo.xacro  smb_imu.gazebo.xacro  smb_mono.gazebo.xacro  smb_rgb_camera.gazebo.xacro  smb_rgbcamera.gazebo.xacro  smb_robosense.gazebo.xacro
smb_exploration/: CMakeLists.txt  README.md  package.xml
smb_exploration/config/: global_costmap_exploration.yaml
smb_exploration/include/smb_exploration/: ExplorationMap.h  PointCloudTransformer.h
smb_exploration/launch/cmu/: smb_rss_cmu.launch  smb_rss_tare.launch
smb_exploration/launch/frontier/: smb_rss_frontier.launch  smb_rss_frontier_without_gmapping.launch
smb_exploration/launch/gbplanner/: smb_rss_gbplanner.launch
smb_exploration/src/: ExplorationMap.cpp  PointCloudTransformer.cpp  exploration_map_node.cpp  pointcloud_transformer_node.cpp
smb_gazebo/: README.md  package.xml
smb_gazebo/include/smb_gazebo/: OdometrySource.hpp
smb_gazebo/launch/: sim.launch  smb_gazebo.launch
smb_gazebo/src/: OdometrySource.cpp
smb_gazebo/worlds/: WaA.world  big_map_summer_school.world  epeisses_indoors.world  epeisses_indoors_closed.world  geneva.world
smb_lowlevel_controller/smb_driver/: CMakeLists.txt  package.xml
smb_lowlevel_controller/smb_driver/msg/: RoboteqMotorStatus.msg
smb_lowlevel_controller/smb_driver/src/: RoboteqDevice.cpp  SmbController.cpp
smb_lowlevel_controller/smb_driver/test/: ControllerTest.cpp
smb_lowlevel_controller/smb_lowlevel_controller/: CMakeLists.txt  package.xml
smb_lowlevel_controller/smb_lowlevel_controller/config/: controllers.yaml  hardware.yaml  joint_limits.yaml
smb_lowlevel_controller/smb_lowlevel_controller/launch/: smb_lowlevel_controller.launch
smb_lowlevel_controller/smb_lowlevel_controller/src/: SmbHWInterface.cpp  smb_lowlevel_controller_node.cpp
smb_mpc/: CMakeLists.txt  package.xml
smb_mpc/config/: parameters.yaml  task.info
smb_mpc/include/smb_mpc/: SmbController.hpp  SmbConversions.h  SmbCost.h  SmbCostWrapper.h  SmbDefinitions.h  SmbInterface.h  SmbModelSettings.h  SmbSystemDynamics.h
smb_mpc/launch/: mpc.launch
smb_mpc/src/: SmbController.cpp  SmbConversions.cpp  SmbCost.cpp  SmbCostWrapper.cpp  SmbDefinitions.cpp  SmbInterface.cpp  SmbSystemDynamics.cpp  mpc_path_publisher.py  smb_controller_node.cpp  smb_mpc_node.cpp
smb_mpc/src/cost/: SmbCost.cpp
smb_mpc/test/: TestSmbInterface.cpp
smb_msf/: CMakeLists.txt  package.xml  setup.py
smb_msf/launch/: plotting.launch  smb_msf.launch
smb_msf/param/: smb_msf_params.yaml
smb_msf/rviz/: smb.rviz
smb_msf/smb_msf/: imu_noisifier.py  plotting_node.py  pose_noisifier.py
smb_msf_ekf/: CMakeLists.txt
smb_msf_ekf/launch/: smb_msf.launch
smb_msf_ekf/rviz/: smb.rviz
smb_msf_ekf/smb_msf/: plotting_node.py
smb_msf_graph/: CMakeLists.txt  README.md  package.xml  readme.md  setup.py
smb_msf_graph/config/elevation_mapping/: default.yaml  vlp16.yaml
smb_msf_graph/launch/: plotting.launch  smb_msf_graph.launch  smb_msf_graph_compslam_replay.launch  smb_msf_graph_o3d_replay.launch  smb_msf_graph_replay.launch
smb_msf_graph/smb_msf_graph/smb_msf_graph/: imu_noisifier.py  plotting_node.py
smb_msf_graph/tutorial/config/: 1_smb_graph_params.yaml  2_smb_graph_params.yaml  3_smb_graph_params.yaml  smb_graph_params.yaml
smb_opc/: package.xml
smb_opc/launch/: opc.launch  opc_rviz.launch
smb_opc/rviz/: smb_vis.rviz  smb_vis_default.rviz
smb_path_tracker/: CMakeLists.txt  README.md  package.xml
smb_path_tracker/launch/: dummy_client.launch  pure_pursuit_tracker.launch
smb_path_tracker/src/: dummy_client.cpp  path_tracker_node.cpp  pure_pursuit.cpp
smb_sensors/: CMakeLists.txt  package.xml
smb_slam/: CMakeLists.txt  README.md  package.xml  smb_tf_publisher.py
smb_slam/launch/: build_map.launch  build_map_from_bag.launch  localization.launch  localization_open3dslam.launch  online_slam.launch  pointcloud_to_laserscan.launch  publish_tf.launch  replay_SLAM.launch  tutorial_1.launch  tutorial_2.launch  tutorial_3.launch  visualize_map.launch  visualize_rosbag.launch
smb_slam/rviz/: cartographer.rviz  compslam.rviz  open3d_slam.rviz  rosbag_vis.rviz  slam_vis.rviz
smb_slam/src/: PointcloudStitcher.cpp  pointcloud_stitcher_node.cpp
(+103 files in other folders)
