<?xml version="1.0"?>
<package format="2">
  <name>smb_gazebo</name>
  <version>0.1.0</version>
  <description>smb Gazebo plugins</description>
  <maintainer email="koen.kraemer@mavt.ethz.ch">Koen Kraemer</maintainer>
  <license>Proprietary</license>
  <url type="website">https://bitbucket.org/leggedrobotics/smb_common</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <exec_depend>smb_description</exec_depend>
  <exec_depend>robosense_gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>smb_control</exec_depend>
  <exec_depend>smb_opc</exec_depend>
  <exec_depend>odometry_conversion</exec_depend>

  <export>
    <gazebo plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
  </export>
</package>
