<?xml version="1.0"?>
<package format="2">
	<name>smb_msf</name>
	<version>0.0.0</version>
	<description>msf for smb</description>
	<maintainer email="jelavice@ethz.ch">Edo Jelavic</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	<exec_depend>msf_updates</exec_depend>
	<exec_depend>msf_core</exec_depend>


</package>
